# sok

./: LICENSE  README.md
00-specifkacija-projekta/: README.md
01-podesavanje-okruzenja/: 01-python.md  02-pycharm.md  03-alati.md
02-python/: zadaci.md
03-kreacioni-obrasci/: upustvo.md  zadaci.md
03-kreacioni-obrasci/primeri/: builder.py  singleton.py
03-kreacioni-obrasci/resenja/: abstract_factory.py  builder.py  prototype.py
04-strukturalni-obrasci/: upustvo.md  zadaci.md
04-strukturalni-obrasci/resenja/: lazy_init_proxy.py  proxy_profiler.py
05-obrasci-ponasanja/: upustvo.md  zadaci.md
05-obrasci-ponasanja/resenja/: observer.py  strategy1.py  strategy2.py
06-dependency-injection/: upustvo.md  zadaci.md
07-komponente/: upustvo.md  zadaci.md
07-komponente/StudentskaSluzba/: README.md
07-komponente/StudentskaSluzba/Api/: pyproject.toml
07-komponente/StudentskaSluzba/Core/: pyproject.toml
07-komponente/StudentskaSluzba/Core/ftn/sluzba/: console_main.py
07-komponente/StudentskaSluzba/FakultetPrikazSlozen/: pyproject.toml
07-komponente/StudentskaSluzba/FakultetUcitavanjeFajl/ftn/fakultet/: ucitavanje_fajl.py
07-komponente/StudentskaSluzba/FakultetUcitavanjeKod/: pyproject.toml
07-komponente/StudentskaSluzba/StudentUcitavanjeFajl/: pyproject.toml
07-komponente/StudentskaSluzbaResenje/: README.md
07-komponente/StudentskaSluzbaResenje/Core/ftn/sluzba/: console_main.py
07-komponente/StudentskaSluzbaResenje/FakultetPrikazObican/: pyproject.toml
07-komponente/StudentskaSluzbaResenje/FakultetPrikazSlozen/ftn/fakultet/: prikaz_obican.py  prikaz_slozen.py
07-komponente/StudentskaSluzbaResenje/FakultetUcitavanjeFajl/: pyproject.toml
07-komponente/StudentskaSluzbaResenje/FakultetUcitavanjeKod/ftn/fakultet/: ucitavanje_kod.py
07-komponente/StudentskaSluzbaResenje/StudentPrikazObican/: pyproject.toml
07-komponente/StudentskaSluzbaResenje/StudentPrikazObican/ftn/student/: prikaz_obican.py
07-komponente/StudentskaSluzbaResenje/StudentPrikazSlozen/: pyproject.toml
07-komponente/StudentskaSluzbaResenje/StudentPrikazSlozen/ftn/student/: prikaz_slozen.py
07-komponente/StudentskaSluzbaResenje/StudentUcitavanjeFajl/ftn/student/: ucitavanje_fajl.py
07-komponente/StudentskaSluzbaResenje/StudentUcitavanjeKod/: pyproject.toml
07-komponente/StudentskaSluzbaResenje/StudentUcitavanjeKod/ftn/student/: ucitavanje_kod.py
07-seutptools/: upustvo.md
07-seutptools/StudentskaSluzbaApiComponent/: README.md
07-seutptools/StudentskaSluzbaApiComponent/Core/: pyproject.toml
07-seutptools/StudentskaSluzbaApiComponent/FakultetPrikazObican/: pyproject.toml
07-seutptools/StudentskaSluzbaApiComponent/FakultetPrikazSlozen/: pyproject.toml
07-seutptools/StudentskaSluzbaApiComponent/FakultetUcitavanjeFajl/: pyproject.toml
07-seutptools/StudentskaSluzbaApiComponent/FakultetUcitavanjeKod/: pyproject.toml
07-seutptools/StudentskaSluzbaApiComponent/StudentUcitavanjeFajl/: pyproject.toml
07-seutptools/StudentskaSluzbaComponent/: README.md
07-seutptools/StudentskaSluzbaComponent/Core/: pyproject.toml  setup.py
07-seutptools/StudentskaSluzbaComponent/Core/rs/uns/ftn/: __init__.py
07-seutptools/StudentskaSluzbaComponent/Core/rs/uns/ftn/studentska/sluzba/: console_main.py
07-seutptools/StudentskaSluzbaComponent/Core/rs/uns/ftn/studentska/sluzba/services/: fakultet.py
07-seutptools/StudentskaSluzbaComponent/FakultetPrikazObican/: pyproject.toml
07-seutptools/StudentskaSluzbaComponent/FakultetPrikazSlozen/: pyproject.toml
07-seutptools/StudentskaSluzbaComponent/FakultetPrikazSlozen/rs/uns/ftn/fakultet/: prikaz_slozen.py
07-seutptools/StudentskaSluzbaComponent/FakultetUcitavanjeFajl/: pyproject.toml
07-seutptools/StudentskaSluzbaComponent/FakultetUcitavanjeFajl/rs/: __init__.py
07-seutptools/StudentskaSluzbaComponent/FakultetUcitavanjeFajl/rs/uns/ftn/fakultet/: __init__.py  ucitavanje_fajl.py
07-seutptools/StudentskaSluzbaComponent/FakultetUcitavanjeKod/: pyproject.toml
07-seutptools/StudentskaSluzbaComponent/StudentUcitavanjeFajl/: pyproject.toml
07-seutptools/StudentskaSluzbaComponentApi/: README.md
07-seutptools/StudentskaSluzbaComponentApi/API/: setup.py
07-seutptools/StudentskaSluzbaComponentApi/Core/: setup.py
07-seutptools/StudentskaSluzbaComponentApi/Core/rs/: __init__.py
07-seutptools/StudentskaSluzbaComponentApi/FakultetPrikazObican/: setup.py
07-seutptools/StudentskaSluzbaComponentApi/FakultetPrikazSlozen/: setup.py
07-seutptools/StudentskaSluzbaComponentApi/FakultetUcitavanjeFajl/: setup.py
07-seutptools/StudentskaSluzbaComponentApi/FakultetUcitavanjeKod/: setup.py
08-django-uvod/: upustvo.md
08-flask/prodavnica/: app.py  models.py
08-flask/prodavnica/templates/: base.html  lista_artikala.html  lista_prodavnica.html  unos_artikla.html  unos_prodavnice.html
09-django/: upustvo.md  zadaci.md
09-django-app/: upustvo.md
09-django-app/prodavnica/: README.md
09-django/prodavnica/prodavnicesajt/prodavnice/templates/: lista_prodavnica.html
10-d3/: upustvo.md  zadaci.md
10-d3/prodavnice/: run.sh
10-d3/prodavnice/D3Core/: setup.py
10-d3/prodavnice/D3Core/d3_primeri/templates/: primerPanZoom.html  primerProdavnicaForceLayout.html
11-app/: README.md  requirements.txt
11-app/api/: pyproject.toml
11-app/api/shop/api/model/: __init__.py  article.py  category.py  shop.py
11-app/core/: pyproject.toml
11-app/core/shop/use_cases/: const.py  plugin_recognition.py  shop_tree_view.py
11-app/core/templates/: shop-tree-layout-body.html  shop-tree-layout-header.html
11-app/datasource-code/: pyproject.toml
11-app/datasource-code/shop/code/: datasource.py
11-app/datasource-db/: pyproject.toml
11-app/datasource-db/shop/db/: apps.py  datasource.py  init_data.py  manager.py  mappers.py  model.py  test.py
11-app/django/: pyproject.toml
11-app/django/sites/: settings.py  urls.py
11-app/django/webshop/: apps.py  urls.py  views.py
11-app/django/webshop/templates/: base.html  shop-tree-layout.html
11-app/flask/: app.py
11-app/flask/templates/: base.html  index.html
(+15 files in other folders)
