[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shop-core"
version = "0.1"
description = "Shop core component that contains busines logic and rules."
dependencies = [
    "shop-api==0.1",
    "jinja2==3.1.4"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.data-files]
templates = ["templates/*"]

[tool.setuptools]
provides = ["shop"]