[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ucitavanje-fakultet-kod"
version = "0.1"
description = "Komponenta za ucitavanje fakulteta iz koda."
dependencies = ["studentska-sluzba-api==0.1"]

[project.entry-points."fakultet.ucitavanje"]
ucitavanje_kod = "ftn.fakultet.ucitavanje_kod:FakultetUcitavanjeKod"

[tool.setuptools]
provides = ["ftn.fakultet.ucitavanje_kod"]