[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prikaz-fakultet-obican"
version = "0.1"
description = "Komponenta za obican prikaz fakulteta."
dependencies = ["studentska-sluzba-api==0.1"]

[project.entry-points."fakultet.prikaz"]
prikaz_obican = "ftn.fakultet.prikaz_obican:FakultetPrikazObican"

[tool.setuptools]
provides = ["ftn.fakultet.prikaz_obican"]