[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ucitavanje-fakultet-fajl"
version = "0.1"
description = "Komponenta za ucitavanje fakulteta iz fajla."
dependencies = ["studentska-sluzba-api==0.1"]

[project.entry-points."fakultet.ucitavanje"]
ucitavanje_fajl = "ftn.fakultet.ucitavanje_fajl:FakultetUcitavanjeFajl"

[tool.setuptools]
provides = ["ftn.fakultet.ucitavanje_fajl"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.data-files]
fajlovi = ["fajlovi/fakulteti.txt"]