[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prikaz-student-slozen"
version = "0.1"
description = "Komponenta za slozen prikaz studenata."
dependencies = ["studentska-sluzba-api==0.1"]

[project.entry-points."student.prikaz"]
ucitavanje_fajl = "ftn.student.prikaz_slozen:StudentiPrikazSlozen"

[tool.setuptools]
provides = ["ftn.student.prikaz_slozen"]
