[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prikaz-fakultet-slozen"
version = "0.1"
description = "Komponenta za slozen prikaz fakulteta."
dependencies = []

[project.entry-points."fakultet.prikaz"]
prikaz_slozen = "rs.uns.ftn.fakultet.prikaz_slozen:FakultetPrikazSlozen"

[tool.setuptools]
provides = ["rs.uns.ftn.fakultet.prikaz_slozen"]