[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ucitavanje-fakultet-fajl"
version = "0.1"
description = "Komponenta za ucitavanje fakulteta iz fajla."
dependencies = []

[project.entry-points."fakultet.ucitavanje"]
ucitavanje_fajl = "rs.uns.ftn.fakultet.ucitavanje_fajl:FakultetUcitavanjeFajl"

[tool.setuptools]
provides = ["rs.uns.ftn.fakultet.ucitavanje_fajl"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.data-files]
fajlovi = ["fajlovi/fakulteti.txt"]